# ml-intro-capstone

./: README.md  mypy.ini  pyproject.toml
forest_prediction/: generate_eda.py  train.py
src/forest_prediction/: generate_eda.py  pipeline.py  train.py
tests/: test_forest_prediction.py
