[tool.poetry]
name = "forest_prediction"
version = "0.1.0"
description = ""
authors = ["kaunovka <kaunovka@gmail.com>"]

[tool.poetry.scripts]
eda = "forest_prediction.generate_eda:generate"
train = "forest_prediction.train:train"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
click = "^8.1.3"
pandas-profiling = "^3.2.0"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
